# packit

./: .coverage  .gitignore  LICENSE  Makefile  README.md  notes.md  pyproject.toml  setup.py
.github/workflows/: python-build.yml
docs/: constructs.py  user-guide.md
examples/: README.md  code_eval.py  cowboy_story.py  food_critics.py  math_tools.py  network_partition.py  open_ended.py  packit-demo.ipynb  readme.py  run-all.sh  startup_ceo.py  string_tools.py  team_delegate.py  team_tasks.py  tech_support.py
packit/: __init__.py  agent.py  conditions.py  context.py  errors.py  filters.py  formats.py  loops.py  memory.py  panel.py  results.py  selectors.py  toolbox.py  tools.py  types.py  utils.py
packit/abac/: __init__.py  adapter.py  pdp.py  subset.py  utils.py
packit/groups/: __init__.py  panel.py  router.py
packit/loops/: __init__.py  base.py  builder.py  complex.py  legacy.py  multi_agent.py  single_agent.py
packit/prompts/: __init__.py  base.py  mixtral.py  smaug.py
packit/results/: __init__.py  enum.py  function.py  json.py  markdown.py  misc.py  primitive.py
packit/tools/: __init__.py  loop.py  math.py  string.py  team.py  toolbox.py  utils.py
packit/tracing/: __init__.py  console.py  spans.py  traceloop.py
requirements/: base.txt  optional.txt
tests/: mocks.py  test_conditions.py  test_context.py  test_filters.py  test_formats.py  test_memory.py  test_prompts.py  test_selectors.py  test_tracing.py  test_utils.py
tests/abac/: test_pdp.py  test_utils.py
tests/agent/: test_agent.py  test_connect.py
tests/groups/: test_panel.py  (+1 more)
(+27 files in other folders)
