[project]
name = "packit-llm"
version = "0.1.0"
description = "Packit LLM"
authors = [{name = "ssube", email = "seansube@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ssube/packit"
Issues = "https://github.com/ssube/packit/issues"

[tool.black]
force-exclude = '''/(diffusion_original|lpw).py'''

[tool.coverage.run]
omit = [
    "packit/loops/legacy.py",
]

[tool.isort]
profile = "black"
force_to_top = ".logging"
skip_glob = ["*/lpw.py"]

[tool.mypy]
# ignore_missing_imports = true
exclude = [
    "packit/loops/legacy.py",
]

[[tool.mypy.overrides]]
module = [
    "coloredlogs",
    "mistletoe",
    "mistletoe.block_token",
    "mistletoe.span_token",
    "py_abac",
    "traceloop.sdk",
    "traceloop.sdk.decorators",
    "traceloop.sdk.tracing",
    "traceloop.sdk.tracing.tracing",
    "traceloop.sdk.utils",
]
ignore_missing_imports = true
